syntax = "proto3";




option go_package = "./pkg/proto";


service UsersServer {
  rpc CreateUser(User) returns (UserId) {}
  rpc GetUserByEmail(Email) returns (User) {}
  rpc GetAllUsers(Sort) returns (Users) {}
}

message Sort{
  string Region = 1;
  string Status = 2;
}

message UserId{
  string Id = 1;
}

message User{
  string FirstName = 1;
  string LastName = 2;
  string Email = 3;
  int64 Age = 4;
  string Region = 5;
  string Status = 6;
}

message Email{
  string UserEmail = 1;
}

message Users {
  repeated User List = 1;
}

